stDemoOne/force-app/main/default/objects/Account/fields/gps_Resume_Raw_Text__c.field-meta.xml
<CustomField>
    <fullName>gps_Resume_Raw_Text__c</fullName>
    <label>Resume Raw Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>