stDemoOne/force-app/main/default/objects/Account/fields/Interaction_History__c.field-meta.xml
<CustomField>
    <fullName>Interaction_History__c</fullName>
    <label>Interaction History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>