stDemoOne/force-app/main/default/objects/Account/fields/SDO_Sales_Rating_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Rating_Indicator__c</fullName>
    <description>What: used in Channel Plans reporting</description>
    <formula>IMAGE(IF (SDO_Value__c &gt; 0, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 1, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 2, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 3, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 4, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Indicator</label>
    <type>Text</type>
</CustomField>