stDemoOne/force-app/main/default/objects/Account/recordTypes/SDO_Account_Partner.recordType-meta.xml
<RecordType>
    <fullName>SDO_Account_Partner</fullName>
    <active>true</active>
    <description>Partner accounts with additional, channel-related information like the Partner
        Scorecard.</description>
    <label>Partner</label>
</RecordType>