stDemoOne/force-app/main/default/objects/Account/listViews/SDO_All_Person_Accounts.listView-meta.xml
<ListView>
    <fullName>SDO_All_Person_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount,PersonAccount.SDO_PersonAccounts</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Template</value>
    </filters>
    <label>All - Person Accounts</label>
</ListView>